Closed Bug 995490 Opened 10 years ago Closed 10 years ago

Tracelogger: Assertion failure: entry.u.s.textId == id, at vm/TraceLogging.cpp:590

Categories

(Core :: JavaScript Engine, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla31

People

(Reporter: h4writer, Assigned: h4writer)

References

Details

Attachments

(1 file)

When running tracelogging in debug mode we get some asserts.
Bug 989152 made it possible to decide to not log specific events. Now we shouldn't test the debug asserts in that case, because it contains nonsense data.
Assignee: nobody → hv1989
Attachment #8405663 - Flags: review?(till)
Blocks: 989152
Comment on attachment 8405663 [details] [diff] [review]
Don't check id when not active

Review of attachment 8405663 [details] [diff] [review]:
-----------------------------------------------------------------

Oh, yes, yes :)
Attachment #8405663 - Flags: review?(till) → review+
https://hg.mozilla.org/mozilla-central/rev/e07e0a07d0a5
Status: NEW → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla31
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: