Bug 995490 - Tracelogger: Don't assert for wrong textId on non-active items, r=till